terraform/ephemeral/whitepaper/vpc/sg.tf
resource "aws_security_group" "allow-web-traffic" {
  name        = "allow-web-traffic"
  description = "Allow inbound web traffic"
  vpc_id      = aws_vpc.main.id

  # Expose TLS ports to any IP
  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Expose HTTP ports to any IP
  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Expose SSH ports from any ip
  ingress {
    description = "SSH access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ip]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow-web-traffic"
  }
}
